# routes/carRoutes.js
@@ -6,6 +6,7 @@ const {
   createCar,
   updateCar,
   deleteCar,
+  getTotalCarsNumber,
 } = require("../services/carsService");
 const { protect, restrictTo } = require("../middlewares/authMiddleware");
 
@@ -19,5 +20,7 @@ router
   .get(protect, restrictTo("admin"), getCarById)
   .put(protect, restrictTo("admin"), updateCar)
   .delete(protect, restrictTo("admin"), deleteCar);
+
+router.route("/total").get(protect, restrictTo("admin"), getTotalCarsNumber);
 
 module.exports = router;
